--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,11 +1,48 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org" xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
+<html lang="en">
+
 <head>
-    <title>Spring Security Example</title>
+    <meta charset="UTF-8">
+    <title>All users</title>
 </head>
 <body>
-<h1>Welcome to Index PAGE!</h1>
+<h1>Users</h1>
+<table>
+    <tr>
+        <th>Id</th>
+        <th>Name</th>
+        <th>Surname</th>
+        <th>Age</th>
+        <th>Roles</th>
+        <th>Actions</th>
+    </tr>
+    <tr th:each="user : ${users}">
+        <td th:utext="${user.getId()}">Id</td>
+        <td th:utext="${user.getName()}">Name</td>
+        <td th:utext="${user.getSurname()}">Surname</td>
+        <td th:utext="${user.getAge()}">Age</td>
+        <td th:utext="${#strings.listJoin(user.getRoles(), ', ')}">Roles</td>
+        <td>
+            <a th:href="@{/admin/edit(id=${user.getId()})}">
+                <input type="submit" value="Edit"/>
+            </a>
 
+            <form style="display: inline-block;" th:method="POST" th:action="@{/admin/delete}">
+                <input type="hidden" name="id" th:value="${user.getId()}"/>
+                <input type="submit" value="Delete"/>
+            </form>
+        </td>
+    </tr>
+</table>
+<br>
+<input type="button" value="Add User" onclick="window.location.href = 'admin/new'">
+<br>
+<br>
+<form th:action="@{/logout}" th:method="POST">
+    <input type="submit" value="Logout"/>
+</form>
+<br>
 
 </body>
 </html>
