--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -6,6 +6,32 @@
 <body>
 <h1>User, welcome spring boot security page!</h1>
 
+<br>
+<br/>
+
+<table>
+    <tr>
+        <th> UserName </th>
+        <th> Id </th>
+        <th>Name </th>
+        <th>Surname </th>
+        <th>Age </th>
+    </tr>
+
+    <tr>
+        <td th:utext="${user.getUsername()}">UserName</td>
+        <td th:utext="${user.getId()}">Id</td>
+        <td th:utext="${user.getName()}">Name</td>
+        <td th:utext="${user.getSurname()}">Surname</td>
+        <td th:utext="${user.getAge()}">Age</td>
+
+    </tr>
+</table>
+<br>
+<form th:action="@{/logout}" th:method="POST">
+    <input type="submit" value="Logout"/>
+</form>
+<br>
 
 </body>
 </html>
